--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         </div>
       </div>
       <input type="submit" value="save"/>
+
+      <input type="submit" value="delete all"/>
+
     </form>
 
     <h1>Reading List</h1>
