--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
       </div>
       <input type="submit" value="save"/>
 
-      <input type="submit" value="delete all"/>
+      <button id="delete-button" type="button">Delete All</button>
 
     </form>
 
     <h1>Reading List</h1>
+    <section>
     <ul id="reading-list"></ul>
+  </section>
   </body>
 </html>
