--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <input type="submit" value="save"/>
 
-      <button id="delete-button" type="button">Delete All</button>
+      <button id="delete-button" value type="button">Delete All</button>
 
     </form>
 
